--- a/index.html
+++ b/index.html
@@ -180,14 +180,25 @@
           <h2 class="mb-5">Experience</h2>
           <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="resume-content">
+              <h5 class="mb-0">Software Competence Center Hagenberg (SCCH), Austria </h5>
+              <a href="https://www.scch.at/">www.scch.at</a>
+              <p>Post-Doc Researcher (Data Science)</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">2021.08 – Present</span>
+            </div>
+            
+          <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+            <div class="resume-content">
               <h5 class="mb-0">PAK-AUSTRIA FACHHOSCHULE - INSTITUTE OF APPLED SCIENCES AND TECHNOLOGY, MANG, HARIPUR, KPK, PAKISTAN. </h5>
               <a href="https://www.paf-iast.edu.pk/">www.paf-iast.edu.pk</a>
               <p>Assistant Professor (Computer Science)</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">2020.11 – Present</span>
-            </div>
+            </div> 
           </div>
+          
           <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="resume-content">
               <h5 class="mb-0">ATOS, Nanjing, China </h5>
@@ -875,7 +886,15 @@
             <ol type="1">
               <li>Electronic Commerce and Research (Elsevier)</li>
               <li>IEEE Transactions on Big Data</li>
+              <li>IEEE Transactions on Industrial Informatics </li>
+              <li>IEEE Internet of Things Journal </li>
               <li>IEEE Access</li>
+            </ol>
+             Co-Chair </b>
+            <ol type="1">
+              <li>1st International Workshop on AI System Engineering: Math, Modelling and Software, Linz, Austria (<a href="http://www.dexa.org/aisys2021">DEXA-2021</a>)</li>
+
+
             </ol>
           <i class="fa fa-tag"></i>
             Session Chair @ IEEE HPCC 2016, Sydney, Australia <br>
