--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
             <div class="resume-date text-md-right">
               <span class="text-primary">2021.08 – Present</span>
             </div>
+          </div>
             
           <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
             <div class="resume-content">
