--- a/index.html
+++ b/index.html
@@ -886,6 +886,7 @@
             Reviewer </b>
             <ol type="1">
               <li>Electronic Commerce and Research (Elsevier)</li>
+              <li>Digital Communications and Networks (Elsevier)</li>
               <li>IEEE Transactions on Big Data</li>
               <li>IEEE Transactions on Industrial Informatics </li>
               <li>IEEE Internet of Things Journal </li>
@@ -893,7 +894,7 @@
             </ol>
              Co-Chair </b>
             <ol type="1">
-              <li>1st International Workshop on AI System Engineering: Math, Modelling and Software, Linz, Austria (<a href="http://www.dexa.org/aisys2021">DEXA-2021</a>)</li>
+              <li>International Workshop on AI System Engineering: Math, Modelling and Software, Linz, Austria (<a href="http://www.dexa.org/aisys2021">DEXA-2021</a>)</li>
 
 
             </ol>
