--- a/index.html
+++ b/index.html
@@ -882,24 +882,29 @@
               <li>Cloud Computing</li>
               <li>Cyber Security</li>
             </ol>
-          <i class="fa fa-book"></i><b>
-            Reviewer </b>
+          <i class="fa fa-book"></i>
+          <b>Reviewer </b>
             <ol type="1">
-              <li>Electronic Commerce and Research (Elsevier)</li>
-              <li>Digital Communications and Networks (Elsevier)</li>
+              <li>Electronic Commerce and Research (Springer)</li>
+              <li>World Wide Web Journal (Springer)</li>
+              <li>Digital Communications and Networks (Elsevier-KeAi)</li>
               <li>IEEE Transactions on Big Data</li>
               <li>IEEE Transactions on Industrial Informatics </li>
               <li>IEEE Internet of Things Journal </li>
               <li>IEEE Access</li>
             </ol>
-             Co-Chair </b>
+             <b>Co-Chair </b>
             <ol type="1">
               <li>International Workshop on AI System Engineering: Math, Modelling and Software, Linz, Austria (<a href="http://www.dexa.org/aisys2021">DEXA-2021</a>)</li>
-
-
             </ol>
+          
+             <b>Session Chair </b>
+            <ol type="1">
+              <li> IEEE HPCC/DSS/SmartCity 2016, Sydney, Australia</li>
+            </ol>      
+          
           <i class="fa fa-tag"></i>
-            Session Chair @ IEEE HPCC 2016, Sydney, Australia <br>
+            Session Chair @  <br>
           <i class="fa fa-tag"></i>
             IEEE Member (Since 2014) <br>
           <i class="fa fa-tag"></i>
