--- a/index.html
+++ b/index.html
@@ -879,6 +879,8 @@
             Research Interst </b>
             <ol type="1">
               <li>Data Science & Big Data Technology</li>
+              <li>Human-AI Teaming Intelligence </li>
+              <li>Predictive Maintenance </li>
               <li>Cloud Computing</li>
               <li>Cyber Security</li>
             </ol>
@@ -902,13 +904,11 @@
             <ol type="1">
               <li> IEEE HPCC/DSS/SmartCity 2016, Sydney, Australia</li>
             </ol>      
-          
+
           <i class="fa fa-tag"></i>
-            Session Chair @  <br>
+            IEEE Member (2014 - Present) <br>
           <i class="fa fa-tag"></i>
-            IEEE Member (Since 2014) <br>
-          <i class="fa fa-tag"></i>
-          Expert Member (Data Intelligence Group) -  Atos Scientific Community, France. <br>
+          Expert Member (Data Intelligence Group) -  Atos Scientific Community, France. (2019-2020) <br>
         </div>
       </section>
 
