Finland, Sweden and Spain added

--- a/index.html
+++ b/index.html
@@ -914,6 +914,7 @@
 
     	<section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="gallery">
       	<div class="w-100"><h2> GALLERY </h2>
+		<!-- Row no 1 -->
           <div class="row">
             <div class="col-md-3">
               <div class="polaroid">
@@ -936,10 +937,16 @@
               </div>
             </div>
           </div>
+		<!-- Row no 2 -->
           <div class="row">
             <div class="col-md-3">
               <div class="polaroid">
                 <a href="china.html" target="_blank"><img src="img/Gallery/China/01.jpeg" alt="China" width="170" height="130"></a><div class="container"><p>CHINA</p></div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="polaroid">
+                <a href="finland.html" target="_blank"><img src="img/Gallery/Finland/01.jpeg" alt="Finland" width="170" height="130"></a><div class="container"><p>FINLAND</p></div>
               </div>
             </div>
             <div class="col-md-3">
@@ -952,13 +959,14 @@
                 <a href="germany.html" target="_blank"><img src="img/Gallery/Germany/01.jpeg" alt="Germany" width="169.2" height="130"></a><div class="container"><p>GERMANY</p></div>
               </div>
             </div>
-            <div class="col-md-3">
+			</div>
+		<!-- Row no 3 -->
+		  <div class="row">
+		     <div class="col-md-3">
               <div class="polaroid">
                 <a href="japan.html" target="_blank"><img src="img/Gallery/Japan/01.jpeg" alt="Japan" width="170" height="130"></a><div class="container"><p>JAPAN</p></div>
               </div>
-            </div>
-          </div>
-          <div class="row">
+             </div>
             <div class="col-md-3">
               <div class="polaroid">
                 <a href="kingdom of saudi arabia.html" target="_blank"><img src="img/Gallery/Kingdom of Saudi Arabia/01.jpeg" alt="Kingdom of Saudi Arabia" width="170" height="130"></a><div class="container"><p>Saudi Arabia</p></div>
@@ -974,18 +982,32 @@
                 <a href="netherlands.html" target="_blank"><img src="img/Gallery/Netherlands/01.jpeg" alt="Netherlands" width="170" height="130"></a><div class="container"><p>NETHERLANDS</p></div>
               </div>
             </div>
+			  </div>
+		<!-- Row no 4 -->
+		  <div class="row">  
             <div class="col-md-3">
               <div class="polaroid">
                 <a href="pakistan.html" target="_blank"><img src="img/Gallery/Pakistan/01.jpeg" alt="Pakistan" width="170" height="130"></a><div class="container"><p>PAKISTAN</p></div>
               </div>
             </div>
-          </div>
-          <div class="row">
+            <div class="col-md-3">
+              <div class="polaroid">
+                <a href="spain.html" target="_blank"><img src="img/Gallery/Spain/01.jpeg" alt="Spain" width="170" height="130"></a><div class="container"><p>SPAIN</p></div>
+              </div>
+			</div>
+            <div class="col-md-3">
+              <div class="polaroid">
+                <a href="sweden.html" target="_blank"><img src="img/Gallery/Sweden/01.jpg" alt="Sweden" width="170" height="130"></a><div class="container"><p>SWEDEN</p></div>
+              </div>
+            </div>
             <div class="col-md-3">
               <div class="polaroid">
                 <a href="switzerland.html" target="_blank"><img src="img/Gallery/Switzerland/01.jpeg" alt="Switzerland" width="170" height="130"></a><div class="container"><p>SWITZERLAND</p></div>
               </div>
             </div>
+		  </div>
+		<!-- Row no 5 -->
+		  <div class="row">
             <div class="col-md-3">
               <div class="polaroid">
                 <a href="thailand.html" target="_blank"><img src="img/Gallery/Thailand/01.jpeg" alt="Thailand" width="169" height="130"></a><div class="container"><p>THAILAND</p></div>
@@ -1004,7 +1026,6 @@
           </div>
         </div>
     	</section>
-
     </div>
 
 
