--- a/index.html
+++ b/index.html
@@ -892,12 +892,18 @@
               <li>Digital Communications and Networks (Elsevier-KeAi)</li>
               <li>IEEE Transactions on Big Data</li>
               <li>IEEE Transactions on Industrial Informatics </li>
+			  <li>IEEE Transactions on Intelligent Transportation Systems </li>
+			  <li>IEEE Transactions on Emerging Topics in Computing </li>
+			  <li>IEEE Transactions on Vehicular Technology </li>
+			  <li>IEEE Transactions on Fuzzy Systems </li>
               <li>IEEE Internet of Things Journal </li>
               <li>IEEE Access</li>
+			  <li>ACM Computing Surveys</li>
             </ol>
-             <b>Co-Chair </b>
+             <b>Organising Chair </b>
             <ol type="1">
-              <li>International Workshop on AI System Engineering: Math, Modelling and Software, Linz, Austria (<a href="http://www.dexa.org/aisys2021">DEXA-2021</a>)</li>
+              <li>1st International Workshop on AI System Engineering: Math, Modelling and Software, Linz, Austria (<a href="http://www.dexa.org/aisys2021">DEXA-2021</a>)</li>
+			  <li>2nd International Workshop on AI System Engineering: Math, Modelling and Software, Linz, Austria (<a href="http://www.dexa.org/aisys2022">DEXA-2022</a>)</li>
             </ol>
           
              <b>Session Chair </b>
