--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <!-- twitter card tag -->
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@maknju" />
+    <meta name="twitter:site" content="@dr_maqbool_khan" />
     <meta name="twitter:title" content="Maqbool Khan" />
     <meta name="twitter:description" content="Dr Maqbool Khan" />
     <meta name="twitter:image" content="http://maqboolkhan.com/img/profile.jpg" />
