--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
           <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
             <div class="resume-content">
               <h3 class="mb-0">SCCH, Austria</h3>
-              <div class="subheading mb-3">Human-AI Teaming Platform for Maintaining and Evolving AI Systems in Manufacturing <a href="https://www.scch.at/data-science/projekte/detail/predmain">(PredMAIn)</a></div>
+              <div class="subheading mb-3">Human-AI Teaming Platform for Maintaining and Evolving AI Systems in Manufacturing <a href="https://www.scch.at/data-science/projekte/detail/teamingai">(teaming.ai)</a></div>
               <p>Research on Human-AI teaming in manufacturing <br>
                 Jupyter Notebook, Python, BPMN Modeling<br><br>
               <b> Main Responsibilities </b>
@@ -700,7 +700,7 @@
           <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
             <div class="resume-content">
               <h3 class="mb-0">SCCH, Austria</h3>
-              <div class="subheading mb-3">AI-based Predictive Maintenance <a href="https://www.scch.at/data-science/projekte/detail/teamingai">(teaming.ai)</a></div>
+              <div class="subheading mb-3">AI-based Predictive Maintenance <a href="https://www.scch.at/data-science/projekte/detail/predmain">(PredMAIn)</a></div>
               <p>Research on Predictive Maintenenace in SMEs <br>
                 Jupyter Notebook, Python (Algorithm development) <br><br>
               <b> Main Responsibilities </b>
