--- a/portugal.html
+++ b/portugal.html
@@ -23,7 +23,7 @@
             <a href="img/Gallery/Portugal/03.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Portugal 03"><img src="img/Gallery/Portugal/03.jpeg" alt="Portugal 03" height="150"></a>
             <a href="img/Gallery/Portugal/04.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Portugal 04"><img src="img/Gallery/Portugal/04.jpeg" alt="Portugal 04"></a>
             <a href="img/Gallery/Portugal/05.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Portugal 05"><img src="img/Gallery/Portugal/05.jpeg" alt="Portugal 05"></a>
-            <a href="img/Gallery/Portugal/06.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Portugal 06"><img src="img/Gallery/Portugal/06.jpeg" alt="Portugal 06"></a>
+            <a href="img/Gallery/Portugal/06.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Portugal 06"><img src="img/Gallery/Portugal/06.jpeg" alt="Portugal 06" height="150"></a>
             <a href="img/Gallery/Portugal/07.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Portugal 07"><img src="img/Gallery/Portugal/07.jpeg" alt="Portugal 07"></a>
             <a href="img/Gallery/Portugal/08.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Portugal 08"><img src="img/Gallery/Portugal/08.jpeg" alt="Portugal 08"></a>
             <a href="img/Gallery/Portugal/09.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Portugal 09"><img src="img/Gallery/Portugal/09.jpeg" alt="Portugal 09"></a>
