--- a/malta.html
+++ b/malta.html
@@ -23,9 +23,9 @@
             <a href="img/Gallery/Malta/03.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Malta 03"><img src="img/Gallery/Malta/03.jpeg" alt="Malta 03" height="150"></a>
             <a href="img/Gallery/Malta/04.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Malta 04"><img src="img/Gallery/Malta/04.jpeg" alt="Malta 04"></a>
             <a href="img/Gallery/Malta/05.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Malta 05"><img src="img/Gallery/Malta/05.jpeg" alt="Malta 05"></a>
-            <a href="img/Gallery/Malta/06.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Malta 06"><img src="img/Gallery/Malta/06.jpeg" alt="Malta 06"></a>
-            <a href="img/Gallery/Malta/07.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Malta 07"><img src="img/Gallery/Malta/07.jpeg" alt="Malta 07"></a>
-            <a href="img/Gallery/Malta/08.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Malta 08"><img src="img/Gallery/Malta/08.jpeg" alt="Malta 08"></a>
+            <a href="img/Gallery/Malta/06.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Malta 06"><img src="img/Gallery/Malta/06.jpeg" alt="Malta 06" height="150"></a>
+            <a href="img/Gallery/Malta/07.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Malta 07"><img src="img/Gallery/Malta/07.jpeg" alt="Malta 07" height="150"></a>
+            <a href="img/Gallery/Malta/08.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Malta 08"><img src="img/Gallery/Malta/08.jpeg" alt="Malta 08" height="150"></a>
             <a href="img/Gallery/Malta/09.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Malta 09"><img src="img/Gallery/Malta/09.jpeg" alt="Malta 09"></a>
             <a href="img/Gallery/Malta/10.jpeg" data-lightbox="mygallery" data-title="Maqbool Khan Malta 10"><img src="img/Gallery/Malta/10.jpeg" alt="Malta 10"></a>
           </div>
