--- a/index.html
+++ b/index.html
@@ -674,6 +674,47 @@
         <div class="w-100">
           <h2 class="mb-5">Projects</h2>
 
+<div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+            <div class="resume-content">
+              <h3 class="mb-0">SCCH, Austria</h3>
+              <div class="subheading mb-3">Human-AI Teaming Platform for Maintaining and Evolving AI Systems in Manufacturing <a href="https://www.scch.at/data-science/projekte/detail/predmain">(PredMAIn)</a></div>
+              <p>Research on Human-AI teaming in manufacturing <br>
+                Jupyter Notebook, Python, BPMN Modeling<br><br>
+              <b> Main Responsibilities </b>
+                <ul>
+                  <li>Research on Shared Mental Models for teaming</li>
+                  <li>Knowledge Modeling of Human and AI Systems</li>
+                  <li>Teaming.AI integration with other platoforms</li>
+				  <li>teaming.AI Arhcitecutre and design</li>
+                  <li>Knowledge Graphs and Machine Learning</li>
+                </ul>
+                </p>
+            </div>
+            <div class="resume-date text-md-right"><br><br><br>
+              <span class="text-primary">2021.08 – 2023.01</span>
+            </div>
+          </div>
+		  
+          <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+            <div class="resume-content">
+              <h3 class="mb-0">SCCH, Austria</h3>
+              <div class="subheading mb-3">AI-based Predictive Maintenance <a href="https://www.scch.at/data-science/projekte/detail/teamingai">(teaming.ai)</a></div>
+              <p>Research on Predictive Maintenenace in SMEs <br>
+                Jupyter Notebook, Python (Algorithm development) <br><br>
+              <b> Main Responsibilities </b>
+                <ul>
+                  <li>Research for Machine health monitoring and algorithm design for PdM in SMEs</li>
+                  <li>Systematic Mapping Study of PdM in SMEs</li>
+                  <li>Research on Ball-Screw fault analytics</li>
+				  <li>Cost Method Development for SMEs</li>
+                  <li>Data Labelling Methods development</li>
+                </ul>
+                </p>
+            </div>
+            <div class="resume-date text-md-right"><br><br><br>
+              <span class="text-primary">2021.10 – 2022.12</span>
+            </div>
+          </div>
 
           <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
             <div class="resume-content">
