--- a/index.html
+++ b/index.html
@@ -498,7 +498,8 @@
       <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="publications">
         <div class="w-100">
           <h2 class="mb-5">Publications</h2>
-          <ol type="1">
+		<h3 class="mb-5">Books– Conference/Workshop Proceedings (Edited):</h3>
+<!--           <ol type="1">
           <li>	<b> Maqbool Khan,</b> Liu Meng, Wanchun Dou, Shui Yu “vGraph: Graph Virtualization towards Big Data” in IEEE CBD 2015, Yangzhou, China. <a href="https://doi.org/10.1109/CBD.2015.33">doi:10.1109/CBD.2015.33</a> (EI) </li>
 
           <li>	<b>	Maqbool Khan,</b> Xiolong Xu, Wanchun Dou, Shui Yu “OSaaS: Online Shopping as a Service to Escalate E-Commerce in Developing Countries” in IEEE HPCC/SmartCity/DSS 2016, Sydney, Australia. pp. 1402-1409.<a href="https://doi.org/10.1109/HPCC-SmartCity-DSS.2016.0200">doi:10.1109/HPCC-SmartCity-DSS.2016.0200</a> (CCF) </li>
@@ -518,7 +519,7 @@
           <li>	Wajid Rafique, 	<b>Maqbool Khan,</b> Nadeem Sarwar, Wanchun Dou “A Security Framework to Protect Edge Supported Software Defined Internet of Things Infrastructure” CollaborateCom, 2019 (CCF) <a href="https://link.springer.com/chapter/10.1007%2F978-3-030-30146-0_6">doi:10.1007/978-3-030-30146-0_6</a> </li>
 
           <li>	Wajid Rafique,	<b> Maqbool Khan,</b> Nadeem Sarwar, Wanchun Dou, “Maintainable Software Using Collaboration Between Architecture and Requirements in Heterogeneous IoT Paradigm” CollaborateCom,2010 (CCF) <a href="https://link.springer.com/chapter/10.1007%2F978-3-030-30146-0_34">doi:10.1007/978-3-030-30146-0_34</a> </li>
-          </ol>
+          </ol> -->
 
         </div>
       </section>
