--- a/index.html
+++ b/index.html
@@ -498,7 +498,8 @@
       <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="publications">
         <div class="w-100">
           <h2 class="mb-5">Publications</h2>
-		<h3 class="mb-5">Books– Conference/Workshop Proceedings (Edited):</h3>
+          <!-- Books -->
+          <h3 class="mb-5">Books – Conference/Workshop Proceedings (Edited):</h3>
 <!--           <ol type="1">
           <li>	<b> Maqbool Khan,</b> Liu Meng, Wanchun Dou, Shui Yu “vGraph: Graph Virtualization towards Big Data” in IEEE CBD 2015, Yangzhou, China. <a href="https://doi.org/10.1109/CBD.2015.33">doi:10.1109/CBD.2015.33</a> (EI) </li>
 
