--- a/index.html
+++ b/index.html
@@ -499,7 +499,11 @@
         <div class="w-100">
           <h2 class="mb-5">Publications</h2>
           <!-- Books -->
-          <h3 class="mb-5">Books – Conference/Workshop Proceedings (Edited):</h3>
+          <h4 class="mb-5">Books – Conference/Workshop Proceedings (Edited):</h4>
+	  <ol type="1">
+      		<li>G. Kotsis, A Min Tjoa, Ismail Khalil, Bernhard Moser, Alfred Taudes, Atif Mashkoor, Johannes Sametinger, Jorge Martinez-Gil, Florian Sobieczky, Lukas Fischer, Rudolf Ramler, <b>Maqbool Khan,</b> Gerald Czech., Database and Expert Systems Applications-DEXA 2022 Workshops: 33rd International Conference, DEXA 2022, Vienna, Austria, August 22–24, 2022, Proceedings. Springer Nature, 2022. <a href="https://link.springer.com/book/10.1007/978-3-031-14343-4">https://doi.org/10.1007/978-3-031-14343-4</a></li>
+      		<li>Gabriele Kotsis, A Min Tjoa, Ismail Khalil, Bernhard Moser, Atif Mashkoor, Johannes Sametinger, <b>Maqbool Khan.</b> Database and Expert Systems Applications - DEXA 2023 Workshops: 34th International Conference, DEXA 2023, Penang, Malaysia, August 28–30, 2023, Proceedings. Springer Nature, 2023, <a href="https://link.springer.com/book/10.1007/978-3-031-39689-2">https://doi.org/10.1007/978-3-031-39689-2</a> </li>
+    	  </ol>
 <!--           <ol type="1">
           <li>	<b> Maqbool Khan,</b> Liu Meng, Wanchun Dou, Shui Yu “vGraph: Graph Virtualization towards Big Data” in IEEE CBD 2015, Yangzhou, China. <a href="https://doi.org/10.1109/CBD.2015.33">doi:10.1109/CBD.2015.33</a> (EI) </li>
 
@@ -507,7 +511,7 @@
 
           <li>	<b>	Maqbool Khan,</b> Xiaotong Wu, Xiolong Xu, Wanchun Dou, “Big Data Challenges and opportunities in Industry 4.0” in IEEE ICC 2017, Paris, France pp. 1-6.<a href="https://doi.org/10.1109/ICC.2017.7996801">doi: 10.1109/ICC.2017.7996801)</a> (CCF) </li>
 
-      <!--    <li>	<b>	Maqbool Khan,</b> Wajid Rafiq, Gulzla, Wanchun Dou “Barriers of E-Commerce in developing countries: Pakistan case” in Romanian Journal for Information Science and Technology (Submitted) (SCI) </li> -->
+         <li>	<b>	Maqbool Khan,</b> Wajid Rafiq, Gulzla, Wanchun Dou “Barriers of E-Commerce in developing countries: Pakistan case” in Romanian Journal for Information Science and Technology (Submitted) (SCI) </li>
 
           <li>	Xiaotong Wu, Taotao Wu,	<b>Maqbool Khan,</b> Qiang Ni, Wanchun Dou, IEEE Transactions on Big Data, “Game Theory Based Correlated Privacy Preserving Analysis in Big Data” <a href="https://doi.org/10.1109/TBDATA.2017.2701817">doi:10.1109/TBDATA.2017.2701817</a> </li>
 
