--- a/index.html
+++ b/index.html
@@ -1002,15 +1002,27 @@
               <li>IEEE Access</li>
 			  <li>ACM Computing Surveys</li>
             </ol>
-             <b>Organising Chair </b>
+             <b>Organising Chair</b>
             <ol type="1">
-              <li>1st International Workshop on AI System Engineering: Math, Modelling and Software, Linz, Austria (<a href="http://www.dexa.org/aisys2021">DEXA-2021</a>)</li>
-			  <li>2nd International Workshop on AI System Engineering: Math, Modelling and Software, Linz, Austria (<a href="http://www.dexa.org/aisys2022">DEXA-2022</a>)</li>
+              	<li>1st International Workshop on AI System Engineering: Math, Modelling and Software, Linz, Austria (<a href="https://www.dexa.org/previous/dexa2021/aisys2021.html">DEXA-2021</a>)</li>
+		<li>2nd International Workshop on AI System Engineering: Math, Modelling and Software, Linz, Austria (<a href="https://www.dexa.org/previous/dexa2022/www.dexa.org/aisys2022.html">DEXA-2022</a>)</li>
+		<li>The 3rd International Workshop on AI System Engineering: Math, Modelling and Software, Penang, Malaysia (<a href="https://www.dexa.org/previous/dexa2023/www.dexa.org/aisys2023.html">DEXA-2023</a>)</li>
+              	<li> IEEE HPCC/DSS/SmartCity 2016, Sydney, Australia</li>
             </ol>
-
-             <b>Session Chair </b>
+		
+             <b>TPC Member</b>
             <ol type="1">
-              <li> IEEE HPCC/DSS/SmartCity 2016, Sydney, Australia</li>
+              	<li>International Conference on Intelligent Manufacturing and Industrial Big Data (<a href="https://easychair.org/cfp/ICIMIBD2022">ICIMIBD2022</a>), Changsha, China, December 9-11, 2022.</li>
+		<li>The Sixteenth International Conference on Advances in Databases, Knowledge, and Data Applications (<a href="https://www.iaria.org/conferences2024/ComDBKDA24.html">DBKDA 2024</a>), Athen, Greece, March 10-14, 2024.</li>
+		<li>The 22nd IEEE International Symposium on Parallel and Distributed Processing with Applications (<a href="https://www.ieee-ispa.org/2024/ispa/index.php">IEEE ISPA 2024</a>), Kaifeng, Henan, China October 30 to November 2, 2024.</li>
+            </ol>	
+		
+             <b>Guest Editor</b>
+            <ol type="1">
+              	<li>International Journal of Intelligent Systems (Wiley/Hindawi, IF: 8.99), Special Issue on “Deep Learning-Driven Knowledge Graphs for Intelligent Computing and Applications”, 2022</li>
+		<li>Symmetry Journal (MDPI, IF: 2.7), Special Issue on “Symmetry and Asymmetry in AI-Enabled Human-Centric Collaborative Computing”, 2023</li>
+		<li>Journal of Cloud Computing (Springer Nature, IF: 3.4), Special Issue on “Mobile Edge Computing Meets AI”, 2023-2024</li>
+		<li>International Journal of Ad Hoc and Ubiquitous Computing (Inder Science, IF: 0.7), Special Issue on “Federated Learning for Edge based IoT Anomaly Detection in Big Data Streams”, 2024</li>
             </ol>
 
           <i class="fa fa-tag"></i>
