--- a/index.html
+++ b/index.html
@@ -1018,7 +1018,7 @@
               	<li>International Conference on Intelligent Manufacturing and Industrial Big Data (<a href="https://easychair.org/cfp/ICIMIBD2022">ICIMIBD2022</a>), Changsha, China, December 9-11, 2022.</li>
 		<li>The Sixteenth International Conference on Advances in Databases, Knowledge, and Data Applications (<a href="https://www.iaria.org/conferences2024/ComDBKDA24.html">DBKDA 2024</a>), Athen, Greece, March 10-14, 2024.</li>
 		<li>The 22nd IEEE International Symposium on Parallel and Distributed Processing with Applications (<a href="https://www.ieee-ispa.org/2024/ispa/index.php">IEEE ISPA 2024</a>), Kaifeng, Henan, China October 30 to November 2, 2024.</li>
-            </ol>	
+            </ol>
 		
              <b>Guest Editor</b>
             <ol type="1">
@@ -1027,11 +1027,15 @@
 		<li>Journal of Cloud Computing (Springer Nature, IF: 3.4), Special Issue on “Mobile Edge Computing Meets AI”, 2023-2024</li>
 		<li>International Journal of Ad Hoc and Ubiquitous Computing (Inder Science, IF: 0.7), Special Issue on “Federated Learning for Edge based IoT Anomaly Detection in Big Data Streams”, 2024</li>
             </ol>
-
-          <i class="fa fa-tag"></i>
-            IEEE Member (2014 - Present) <br>
-          <i class="fa fa-tag"></i>
-          Expert Member (Data Intelligence Group) -  Atos Scientific Community, France. (2019-2020) <br>
+		
+             <b>Awards and Honours</b>
+		<i class="fa fa-tag"></i> PAF-IAST Post-doc Research Fellowship at SCCH, Austria (2021-2023) <br>
+		<i class="fa fa-tag"></i> Full Scholarship Award for PhD in China (2013-2018) Awarding Institute Name: CSC, China <br>
+		<i class="fa fa-tag"></i> Scholarship Award for MS in China (2011-2013) Awarding Institute Name: MOE Pakistan and CSC China <br>
+		<i class="fa fa-tag"></i> IEEE Member (2014 -  2022) <br>
+		<i class="fa fa-tag"></i> IEEE Senior Member (2022 – to-date) <br>
+		<i class="fa fa-tag"></i> ACM Member (2023 – 2024) <br>
+		<i class="fa fa-tag"></i> Expert Member of ATOS Scientific Community, France (2019-2020) <br>
         </div>
       </section>
 
