--- a/index.html
+++ b/index.html
@@ -1028,7 +1028,7 @@
 		<li>International Journal of Ad Hoc and Ubiquitous Computing (Inder Science, IF: 0.7), Special Issue on “Federated Learning for Edge based IoT Anomaly Detection in Big Data Streams”, 2024</li>
             </ol>
 		
-             <b>Awards and Honours</b>
+             <b>Awards and Honours</b> <br>
 		<i class="fa fa-tag"></i> PAF-IAST Post-doc Research Fellowship at SCCH, Austria (2021-2023) <br>
 		<i class="fa fa-tag"></i> Full Scholarship Award for PhD in China (2013-2018) Awarding Institute Name: CSC, China <br>
 		<i class="fa fa-tag"></i> Scholarship Award for MS in China (2011-2013) Awarding Institute Name: MOE Pakistan and CSC China <br>
