--- a/index.html
+++ b/index.html
@@ -131,7 +131,9 @@
         <div class="w-100">
           <h1 class="mb-0"><span class="text-primary">Dr.</span> Maqbool
             <span class="text-primary">Khan</span>
-          </h1><br>
+          </h1>
+		<button class="btn-cv"><i class="fa fa-download"></i> Download</button>
+		<br>
   		<h3> Solution Architect &nbsp; | &nbsp; Data Scientist &nbsp; | &nbsp; Researcher </h3> <br>
       <h3>Assistant Professor</h3>
           <div class="subheading mb-5">Pak-Austria Fachhoschule - Institute of Appled Sciences and Technology, Mang, Haripur, KPK, Pakistan.<br>
