--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <h1 class="mb-0"><span class="text-primary">Dr.</span> Maqbool
             <span class="text-primary">Khan</span>
           </h1>
-		<button class="btn-cv"><i class="fa fa-download"></i> Download</button>
+		<button class="btn-cv"><i class="fa fa-download"></i> Download CV</button>
 		<br>
   		<h3> Solution Architect &nbsp; | &nbsp; Data Scientist &nbsp; | &nbsp; Researcher </h3> <br>
       <h3>Assistant Professor</h3>
