--- a/index.html
+++ b/index.html
@@ -131,9 +131,7 @@
         <div class="w-100">
           <h1 class="mb-0"><span class="text-primary">Dr.</span> Maqbool
             <span class="text-primary">Khan</span>
-          </h1>
-		<button class="btn-cv"><i class="fa fa-download"></i> Download CV</button>
-		<br>
+          </h1><br>
   		<h3> Solution Architect &nbsp; | &nbsp; Data Scientist &nbsp; | &nbsp; Researcher </h3> <br>
       <h3>Assistant Professor</h3>
           <div class="subheading mb-5">Pak-Austria Fachhoschule - Institute of Appled Sciences and Technology, Mang, Haripur, KPK, Pakistan.<br>
@@ -148,7 +146,9 @@
           </div>
           <p class="lead mb-5">Dr. Maqbool Khan is an experienced in leveraging big data technologies and data science using cloud computing to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
 
-  		<div class="social-icons">
+  		
+	<div class="d-flex flex-column flex-md-row justify-content-between">
+		<div class="social-icons">
             <a href="https://cn.linkedin.com/in/maqbool-khan">
               <i class="fab fa-linkedin-in"></i>
             </a>
@@ -167,8 +167,9 @@
   		    <a href="https://www.researchgate.net/profile/Maqbool_Khan3">
               <i class="fab fa-researchgate"></i>
             </a>
-
-          </div>
+	  </div>	
+		<button class="btn-cv"><i class="fa fa-download"></i> Download CV</button>
+        </div>
 
         </div>
       </section>
