--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
               <i class="fab fa-linkedin-in"></i>
             </a>
   		      <a href="https://scholar.google.com/citations?user=HYdAeGEAAAAJ&hl=en&oi=sra">
-              <i class="ai ai-google-scholar ai-2x"></i>
+              <i class="ai ai-google-scholar"></i>
             </a>
             <a href="https://twitter.com/maknju">
               <i class="fab fa-twitter"></i>
