--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <a href="https://cn.linkedin.com/in/maqbool-khan">
               <i class="fab fa-linkedin-in"></i>
             </a>
-  		      <a href="https://scholar.google.com/citations?user=HYdAeGEAAAAJ&hl=en&oi=sra">
+  		<a href="https://scholar.google.com/citations?user=HYdAeGEAAAAJ&hl=en&oi=sra">
               <i class="ai ai-google-scholar"></i>
             </a>
             <a href="https://twitter.com/maknju">
@@ -168,7 +168,7 @@
               <i class="fab fa-researchgate"></i>
             </a>
 	  </div>	
-		<button class="btn-cv"><i class="fa fa-download"></i> Download CV</button>
+		<a href="Files/Dr_Maqbool_Khan_CV.pdf" class="btn-cv" download="DR. Maqbool Khan CV"><i class="fa fa-download"></i> Download CV</a>
         </div>
 
         </div>
