--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
               <i class="fab fa-researchgate"></i>
             </a>
 	  </div>	
-		<a href="Files/Dr_Maqbool_Khan_CV.pdf" class="btn-cv" download="DR. Maqbool Khan CV"><i class="fa fa-download"></i> Download CV</a>
+		<a href="Files/Dr_Maqbool_Khan_CV.pdf" class="btn-cv" download="Dr_Maqbool_Khan_CV.pdf"><i class="fa fa-download"></i> Download CV</a>
         </div>
 
         </div>
