--- a/index.html
+++ b/index.html
@@ -733,7 +733,7 @@
       <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
         <div class="w-100">
           <h2 class="mb-5">Projects</h2>
-
+		
 <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
             <div class="resume-content">
               <h3 class="mb-0">SCCH, Austria</h3>
@@ -973,9 +973,21 @@
             </div>
             <div class="resume-date text-md-right"><br><br><br>
               <span class="text-primary">2006.01 – 2016.03</span>
-            </div>
+            </div> <br>
+		  
+	<div class="subheading mb-3">Academic Thesis</div>
+          <ul class="fa-ul mb-0">
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              M.Sc. thesis title “Computerization of Account System of Allied Bank of Pakistan”</li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              MS thesis title, <i>“FP-Tree based Role Mining with pre-assigned weighted permissions”.</i></li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
+              PhD thesis title, <i>“Research on Big Data Graphs Summarization Theory and applications in the Cloud Environment”.</i></li>
+          </ul>
           </div>
-
         </div>
       </section>
     <hr class="m-0">
