--- a/index.html
+++ b/index.html
@@ -1065,22 +1065,22 @@
         <div class="w-100">
           <h2 class="mb-5">Students</h2>
 
-              <div class="subheading mb-3">Networking Skills</div>
-                  <ul>
-                  <li> Microsoft Windows Server </li>
-                	<li> MS (DNS, DHCP,  IIS, ISA Server, Exchange Server ) </li>
-                	<li> Domain base network and workgroup network </li>
-                	<li> Active Directory, Security Policies </li>
-                	<li> FTP, TFTP, NAT, IP Tables </li>
-                	<li> Cisco (Routers, Switches, VLAN) </li>
-                	<li> Protocols: RIP1, RIP2, IGRP, OSPF, EIGRP </li>
-                	<li> Cloud Computing (IaaS, PaaS, SaaS) </li>
-                	<li> Network Modelling and monitoring </li>
-                  <li> SDN & NFV with Nokia Telco Cloud </li>
-                  <li> Linux (RHEL, Ubuntu, Mint) </li>
-                  <li> Sensors installation and configurations </li>
-                  <li> Installation and Configuration of Riverbed </li>
-                  </ul>
+              <div class="subheading mb-3">Ph.D.</div>
+                <ul>
+                  <li> Mr. Taimur Ahmed (Co-Supervising) </li>
+                </ul> <br>
+
+	      <div class="subheading mb-3">MS/M.Phil. Thesis (Supervised)</div>
+                <ul>
+                  <li>AI-Based Intelligent Vehicle’s Brake Fault Prediction System (Mr. Muhmmad Ahmed Khan, MS in Artificial Intelligence, Spring-2023) </li>
+		  <li>Fraud Detection in Blockchain Network using Machine Learning and Graph Analytics (Mr. Fahad Qureshi, MS Data Science, Fall-2023) </li>
+                  <li>Extract, Transform Load Error Detection and Classification Using Machine Learning (Mr. Nazar Hussain, MS in AI, Fall-2023) </li>
+		  <li>Predictive Maintenance Using MDP & Q-Learning (Mr. Bilawal Jadoon, MS in Artificial Intelligence, Spring-2024) </li>
+                  <li>Urdu Language command recognizer and translator using MFCC and CNN (Mr. Usman Nawaz, MS in Artificial Intelligence, Spring-2024) </li>
+		  <li>Pituitary Tumor Feature Extraction Methods Using MRI Images (Mr. Muhammad Haseeb Khan, MS in AI, Spring-2024) </li>
+                  <li>Multi-Diseases Prediction Based on Low-Cost Blood Test Reports using AI (Ms. Maria BiBi, MS AI, Spring-2024) </li>
+		  <li>AI based Preservation and Restoration Modelling of the Sub-Surface Water (Ms. Javeria BiBi, MS AI, Spring-2024) </li>
+                </ul> <br>
 
         </div>
       </section>
