--- a/index.html
+++ b/index.html
@@ -1066,12 +1066,12 @@
           <h2 class="mb-5">Students</h2>
 
               <div class="subheading mb-3">Ph.D.</div>
-                <ul>
+                <ol type="1">
                   <li> Mr. Taimur Ahmed (Co-Supervising) </li>
-                </ul> <br>
+                </ol> <br>
 
 	      <div class="subheading mb-3">MS/M.Phil. Thesis (Supervised)</div>
-                <ul>
+                <ol type="1">
                   <li>AI-Based Intelligent Vehicle’s Brake Fault Prediction System (Mr. Muhmmad Ahmed Khan, MS in Artificial Intelligence, Spring-2023) </li>
 		  <li>Fraud Detection in Blockchain Network using Machine Learning and Graph Analytics (Mr. Fahad Qureshi, MS Data Science, Fall-2023) </li>
                   <li>Extract, Transform Load Error Detection and Classification Using Machine Learning (Mr. Nazar Hussain, MS in AI, Fall-2023) </li>
@@ -1080,7 +1080,7 @@
 		  <li>Pituitary Tumor Feature Extraction Methods Using MRI Images (Mr. Muhammad Haseeb Khan, MS in AI, Spring-2024) </li>
                   <li>Multi-Diseases Prediction Based on Low-Cost Blood Test Reports using AI (Ms. Maria BiBi, MS AI, Spring-2024) </li>
 		  <li>AI based Preservation and Restoration Modelling of the Sub-Surface Water (Ms. Javeria BiBi, MS AI, Spring-2024) </li>
-                </ul> <br>
+                </ol> <br>
 
         </div>
       </section>
