--- a/index.html
+++ b/index.html
@@ -1072,14 +1072,31 @@
 
 	      <div class="subheading mb-3">MS/M.Phil. Thesis (Supervised)</div>
                 <ol type="1">
-                  <li>AI-Based Intelligent Vehicle’s Brake Fault Prediction System (Mr. Muhmmad Ahmed Khan, MS in Artificial Intelligence, Spring-2023) </li>
-		  <li>Fraud Detection in Blockchain Network using Machine Learning and Graph Analytics (Mr. Fahad Qureshi, MS Data Science, Fall-2023) </li>
-                  <li>Extract, Transform Load Error Detection and Classification Using Machine Learning (Mr. Nazar Hussain, MS in AI, Fall-2023) </li>
-		  <li>Predictive Maintenance Using MDP & Q-Learning (Mr. Bilawal Jadoon, MS in Artificial Intelligence, Spring-2024) </li>
-                  <li>Urdu Language command recognizer and translator using MFCC and CNN (Mr. Usman Nawaz, MS in Artificial Intelligence, Spring-2024) </li>
-		  <li>Pituitary Tumor Feature Extraction Methods Using MRI Images (Mr. Muhammad Haseeb Khan, MS in AI, Spring-2024) </li>
-                  <li>Multi-Diseases Prediction Based on Low-Cost Blood Test Reports using AI (Ms. Maria BiBi, MS AI, Spring-2024) </li>
-		  <li>AI based Preservation and Restoration Modelling of the Sub-Surface Water (Ms. Javeria BiBi, MS AI, Spring-2024) </li>
+                  <li>AI-Based Intelligent Vehicle’s Brake Fault Prediction System <i>(<a href="https://scholar.google.com/citations?user=-MLlprQAAAAJ&hl=en&oi=sra">Mr. Muhmmad Ahmed Khan,</a> MS in Artificial Intelligence, Spring-2023)</i> </li>
+		  <li>Fraud Detection in Blockchain Network using Machine Learning and Graph Analytics <i>(Mr. Fahad Qureshi, MS Data Science, Fall-2023)</i> </li>
+                  <li>Extract, Transform Load Error Detection and Classification Using Machine Learning <i>(Mr. Nazar Hussain, MS in AI, Fall-2023)</i> </li>
+		  <li>Predictive Maintenance Using MDP & Q-Learning <i>(Mr. Bilawal Jadoon, MS in Artificial Intelligence, Spring-2024)</i> </li>
+                  <li>Urdu Language command recognizer and translator using MFCC and CNN <i>(Mr. Usman Nawaz, MS in Artificial Intelligence, Spring-2024)</i> </li>
+		  <li>Pituitary Tumor Feature Extraction Methods Using MRI Images <i>(Mr. Muhammad Haseeb Khan, MS in AI, Spring-2024)</i> </li>
+                  <li>Multi-Diseases Prediction Based on Low-Cost Blood Test Reports using AI <i>(Ms. Maria BiBi, MS AI, Spring-2024)</i> </li>
+		  <li>AI based Preservation and Restoration Modelling of the Sub-Surface Water <i>(Ms. Javeria BiBi, MS AI, Spring-2024)</i> </li>
+                </ol> <br>
+
+	      <div class="subheading mb-3">MS/M.Phil. Thesis (Co-Supervised)</div>
+                <ol type="1">
+                  <li>Predictive Maintenance in Industrial IoT using Deep Adversarial Learning <i>(Ms. Isra Zafat, MS AI, Spring-2023)</i> </li>
+		  <li>ECG Based Arrhythmia Classification using Deep Learning <i>(Ms. Aqsa Khan, MS AI, Spring-2023)</i> </li>
+		  <li>Healthcare Recommendation System for Cancer Patient <i>(Ms. Yousra Rehman, MS AI, Spring-2023)</i> </li>
+		  <li>Precise Image generation from EEG through generative models <i>(Ms. Sana Irshad, MS Data Science, Spring-2024)</i> </li>
+		  <li>AI-based Eye Disease Pre-Symptomatic Detection Using Next-Generation Sequence Data <i>(Mr. Muhammad Iqbal Khan, MS AI, Spring-2024)</i> </li>
+		  <li>Large Language Model Based Virtual Legal Assistant <i>(Ms. Nawal Khan, MS AI, Spring-2024)</i> </li>
+                </ol> <br>
+
+	      <div class="subheading mb-3">Final Year Projects(FYPs)</div>
+                <ol type="1">
+                  <li>AI-Based Skilled People Marketplace App <i>(Mr. Talal Zaman Abbassi and Yaseen Ejaz, Spring-2024)</i> </li>
+		  <li>Retrieval Augmented Generation for QA using Knowledge Graphs <i>(Mr. Muhammad Yaseen Ejaz and Mr. Muhammad Danish, Spring-2024)</i> </li>
+		  <li>ACE (Autonomous Customer Experience) <i>(Ms. Sibgha Ali and Mr. Sheikh Abdurrehman – 2024)</i> </li>
                 </ol> <br>
 
         </div>
