--- a/index.html
+++ b/index.html
@@ -1075,7 +1075,7 @@
                   <li>AI-Based Intelligent Vehicle’s Brake Fault Prediction System <i>(<a href="https://scholar.google.com/citations?user=-MLlprQAAAAJ&hl=en&oi=sra">Mr. Muhmmad Ahmed Khan,</a> MS in Artificial Intelligence, Spring-2023)</i> </li>
 		  <li>Fraud Detection in Blockchain Network using Machine Learning and Graph Analytics <i>(Mr. Fahad Qureshi, MS Data Science, Fall-2023)</i> </li>
                   <li>Extract, Transform Load Error Detection and Classification Using Machine Learning <i>(Mr. Nazar Hussain, MS in AI, Fall-2023)</i> </li>
-		  <li>Predictive Maintenance Using MDP & Q-Learning <i>(<a hrf="https://www.linkedin.com/in/bilawal-khan-jadoon-745258170/">Mr. Bilawal Jadoon,</a> MS in Artificial Intelligence, Spring-2024)</i> </li>
+		  <li>Predictive Maintenance Using MDP & Q-Learning <i>(<a href="https://www.linkedin.com/in/bilawal-khan-jadoon-745258170/">Mr. Bilawal Jadoon,</a> MS in Artificial Intelligence, Spring-2024)</i> </li>
                   <li>Urdu Language command recognizer and translator using MFCC and CNN <i>(Mr. Usman Nawaz, MS in Artificial Intelligence, Spring-2024)</i> </li>
 		  <li>Pituitary Tumor Feature Extraction Methods Using MRI Images <i>(Mr. Muhammad Haseeb Khan, MS in AI, Spring-2024)</i> </li>
                   <li>Multi-Diseases Prediction Based on Low-Cost Blood Test Reports using AI <i>(Ms. Maria BiBi, MS AI, Spring-2024)</i> </li>
