--- a/index.html
+++ b/index.html
@@ -1078,7 +1078,7 @@
 		  <li>Predictive Maintenance Using MDP & Q-Learning <i>(<a href="https://www.linkedin.com/in/bilawal-khan-jadoon-745258170/">Mr. Bilawal Jadoon,</a> MS in Artificial Intelligence, Spring-2024)</i> </li>
                   <li>Urdu Language command recognizer and translator using MFCC and CNN <i>(Mr. Usman Nawaz, MS in Artificial Intelligence, Spring-2024)</i> </li>
 		  <li>Pituitary Tumor Feature Extraction Methods Using MRI Images <i>(Mr. Muhammad Haseeb Khan, MS in AI, Spring-2024)</i> </li>
-                  <li>Multi-Diseases Prediction Based on Low-Cost Blood Test Reports using AI <i>(Ms. Maria BiBi, MS AI, Spring-2024)</i> </li>
+                  <li>Multi-Diseases Prediction Based on Low-Cost Blood Test Reports using AI <i>(<a href="https://www.linkedin.com/in/maria-zaib-a46a57273">Ms. Maria BiBi,</a> MS AI, Spring-2024)</i> </li>
 		  <li>AI based Preservation and Restoration Modelling of the Sub-Surface Water <i>(Ms. Javeria BiBi, MS AI, Spring-2024)</i> </li>
                 </ol> <br>
 
