--- a/index.html
+++ b/index.html
@@ -1074,10 +1074,10 @@
                 <ol type="1">
                   <li>AI-Based Intelligent Vehicle’s Brake Fault Prediction System <i>(<a href="https://scholar.google.com/citations?user=-MLlprQAAAAJ&hl=en&oi=sra">Mr. Muhmmad Ahmed Khan,</a> MS in Artificial Intelligence, Spring-2023)</i> </li>
 		  <li>Fraud Detection in Blockchain Network using Machine Learning and Graph Analytics <i>(Mr. Fahad Qureshi, MS Data Science, Fall-2023)</i> </li>
-                  <li>Extract, Transform Load Error Detection and Classification Using Machine Learning <i>(Mr. Nazar Hussain, MS in AI, Fall-2023)</i> </li>
+                  <li>Extract, Transform Load Error Detection and Classification Using Machine Learning <i>(<a href="https://www.linkedin.com/in/nazar-hussain-9b1714157/">Mr. Nazar Hussain,</a> MS in AI, Fall-2023)</i> </li>
 		  <li>Predictive Maintenance Using MDP & Q-Learning <i>(<a href="https://www.linkedin.com/in/bilawal-khan-jadoon-745258170/">Mr. Bilawal Jadoon,</a> MS in Artificial Intelligence, Spring-2024)</i> </li>
-                  <li>Urdu Language command recognizer and translator using MFCC and CNN <i>(Mr. Usman Nawaz, MS in Artificial Intelligence, Spring-2024)</i> </li>
-		  <li>Pituitary Tumor Feature Extraction Methods Using MRI Images <i>(Mr. Muhammad Haseeb Khan, MS in AI, Spring-2024)</i> </li>
+                  <li>Urdu Language command recognizer and translator using MFCC and CNN <i>(<a href="https://www.linkedin.com/in/usman-nawaz-21532418a">Mr. Usman Nawaz,</a> MS in Artificial Intelligence, Spring-2024)</i> </li>
+		  <li>Pituitary Tumor Feature Extraction Methods Using MRI Images <i>(<a href="https://www.linkedin.com/in/engrmhaseeb/">Mr. Muhammad Haseeb Khan,</a> MS in AI, Spring-2024)</i> </li>
                   <li>Multi-Diseases Prediction Based on Low-Cost Blood Test Reports using AI <i>(<a href="https://www.linkedin.com/in/maria-zaib-a46a57273">Ms. Maria BiBi,</a> MS AI, Spring-2024)</i> </li>
 		  <li>AI based Preservation and Restoration Modelling of the Sub-Surface Water <i>(Ms. Javeria BiBi, MS AI, Spring-2024)</i> </li>
                 </ol> <br>
@@ -1092,7 +1092,7 @@
 		  <li>Large Language Model Based Virtual Legal Assistant <i>(Ms. Nawal Khan, MS AI, Spring-2024)</i> </li>
                 </ol> <br>
 
-	      <div class="subheading mb-3">Final Year Projects(FYPs)</div>
+	      <div class="subheading mb-3">Final Year Projects (FYP)</div>
                 <ol type="1">
                   <li>AI-Based Skilled People Marketplace App <i>(Mr. Talal Zaman Abbassi and Yaseen Ejaz, Spring-2024)</i> </li>
 		  <li>Retrieval Augmented Generation for QA using Knowledge Graphs <i>(Mr. Muhammad Yaseen Ejaz and Mr. Muhammad Danish, Spring-2024)</i> </li>
