--- a/index.html
+++ b/index.html
@@ -1073,7 +1073,7 @@
 	      <div class="subheading mb-3">MS/M.Phil. Thesis (Supervised)</div>
                 <ol type="1">
                   <li>AI-Based Intelligent Vehicle’s Brake Fault Prediction System <i>(<a href="https://scholar.google.com/citations?user=-MLlprQAAAAJ&hl=en&oi=sra">Mr. Muhmmad Ahmed Khan,</a> MS in Artificial Intelligence, Spring-2023)</i> </li>
-		  <li>Fraud Detection in Blockchain Network using Machine Learning and Graph Analytics <i>(Mr. Fahad Qureshi, MS Data Science, Fall-2023)</i> </li>
+		  <li>Fraud Detection in Blockchain Network using Machine Learning and Graph Analytics <i>(<a href="https://fahadiqureshi.github.io/">Mr. Fahad Qureshi,</a> MS Data Science, Fall-2023)</i> </li>
                   <li>Extract, Transform Load Error Detection and Classification Using Machine Learning <i>(<a href="https://www.linkedin.com/in/nazar-hussain-9b1714157/">Mr. Nazar Hussain,</a> MS in AI, Fall-2023)</i> </li>
 		  <li>Predictive Maintenance Using MDP & Q-Learning <i>(<a href="https://www.linkedin.com/in/bilawal-khan-jadoon-745258170/">Mr. Bilawal Jadoon,</a> MS in Artificial Intelligence, Spring-2024)</i> </li>
                   <li>Urdu Language command recognizer and translator using MFCC and CNN <i>(<a href="https://www.linkedin.com/in/usman-nawaz-21532418a">Mr. Usman Nawaz,</a> MS in Artificial Intelligence, Spring-2024)</i> </li>
