--- a/index.html
+++ b/index.html
@@ -158,17 +158,26 @@
   		<a href="https://scholar.google.com/citations?user=HYdAeGEAAAAJ&hl=en&oi=sra">
               <i class="ai ai-google-scholar"></i>
             </a>
-            <a href="https://twitter.com/maknju">
+            <a href="https://x.com/dr_maqbool_khan">
               <i class="fab fa-twitter"></i>
             </a>
-            <a href="https://web.facebook.com/maqboolk">
+            <a href="https://web.facebook.com/maqbool.phd">
               <i class="fab fa-facebook-f"></i>
             </a>
             <a href="https://github.com/maknju">
               <i class="fab fa-github"></i>
             </a>
-  		    <a href="https://www.researchgate.net/profile/Maqbool_Khan3">
+  	    <a href="https://www.researchgate.net/profile/Maqbool_Khan3">
               <i class="fab fa-researchgate"></i>
+            </a>
+  	    <a href="https://www.instagram.com/maqbool.phd">
+              <i class="fab fa-instagram"></i>
+            </a>
+  	    <a href="https://www.threads.net/@maqbool.phd">
+              <i class="fab fa-threads"></i>
+            </a>
+  	    <a href="https://www.tiktok.com/@dr.maqbool">
+              <i class="fab fa-tiktok"></i>
             </a>
 	  </div>	
 		<a href="Files/Dr_Maqbool_Khan_CV.pdf" class="btn-cv" download="Dr_Maqbool_Khan_CV.pdf"><i class="fa fa-download"></i> Download CV</a>
