--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
 
     <!-- Custom styles for this template -->
     <link href="css/resume.min.css" rel="stylesheet">
@@ -174,10 +175,10 @@
               <i class="fab fa-instagram"></i>
             </a>
   	    <a href="https://www.threads.net/@maqbool.phd">
-              <i class="fab fa-threads"></i>
+              <i class="fa-brands fa-threads"></i>
             </a>
   	    <a href="https://www.tiktok.com/@dr.maqbool">
-              <i class="fab fa-tiktok"></i>
+              <i class="fab fa-tiktok fa-2x"></i>
             </a>
 	  </div>	
 		<a href="Files/Dr_Maqbool_Khan_CV.pdf" class="btn-cv" download="Dr_Maqbool_Khan_CV.pdf"><i class="fa fa-download"></i> Download CV</a>
