--- a/index.html
+++ b/index.html
@@ -1099,7 +1099,7 @@
 		  <li>Healthcare Recommendation System for Cancer Patient <i>(Ms. Yousra Rehman, MS AI, Spring-2023)</i> </li>
 		  <li>Precise Image generation from EEG through generative models <i>(Ms. Sana Irshad, MS Data Science, Spring-2024)</i> </li>
 		  <li>AI-based Eye Disease Pre-Symptomatic Detection Using Next-Generation Sequence Data <i>(Mr. Muhammad Iqbal Khan, MS AI, Spring-2024)</i> </li>
-		  <li>Large Language Model Based Virtual Legal Assistant <i>(<a href="https://www.linkedin.com/in/nawal-khan-880266208/">Ms. Nawal Khan, MS AI, Spring-2024)</a></i> </li>
+		  <li>Large Language Model Based Virtual Legal Assistant <i>(<a href="https://www.linkedin.com/in/nawal-khan-880266208/">Ms. Nawal Khan,</a> MS AI, Spring-2024)</i> </li>
                 </ol> <br>
 
 	      <div class="subheading mb-3">Final Year Projects (FYP)</div>
