--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
               <i class="fa-brands fa-threads"></i>
             </a>
   	    <a href="https://www.tiktok.com/@dr.maqbool">
-              <i class="fab fa-tiktok fa-2x"></i>
+              <i class="fab fa-tiktok"></i>
             </a>
 	  </div>	
 		<a href="Files/Dr_Maqbool_Khan_CV.pdf" class="btn-cv" download="Dr_Maqbool_Khan_CV.pdf"><i class="fa fa-download"></i> Download CV</a>
